Added script src for canvas

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
 <div id="container">   
 </div>
 </div>
+<footer>
+    <button class="print">Print my Sketch!</button>
+</footer>
     <script src="draft.js" defer>
+    </script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js">
+        
     </script>
     
 </body>
