confirm wipe buttons

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <input type="range" id="grid"  name="Grid Size"
     min="1" max="64" value="1" class="slider2"></button>
 </div>
+<div class="confirmation-box" style="display: none;">
+    <h2>Are you sure you want to wipe out everything?</h2>
+    <div class="confirmation-buttons">
+      <button class="confirm-yes">Yes</button>
+      <button class="confirm-no">No</button>
+    </div>
+  </div>
 <div id="container">   
 </div>
 </div>
