input color changed to white

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1>Etch-a-Sketch</h1>
 <div class="main">
  <div class="buttons">
-<input type="color" value="#000000" id="style1">
+<input type="color" value="#ffffff" id="style1">
 <button class="color">Color Mode</button>
 <button class="grids">Display Grids</button>
 <button class="erase">Erase</button>
